--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -94,6 +94,8 @@ jobs:
         TEMP=$(date +"ImmortalWrt_%Y%m%d_%H%M%S_")$(git rev-parse --short HEAD)
         echo "RELEASE_TAG=$TEMP" >> $GITHUB_ENV
         #required>>add "DISTRIB_GITHUB" to "zzz-default-settings"
+        mkdir -p openwrt/files/etc/uci-defaults
+        touch openwrt/files/etc/uci-defaults/99-release-info
         # sed -i "/DISTRIB_DESCRIPTION=/a\sed -i '/DISTRIB_GITHUB/d' /etc/openwrt_release" openwrt/package/lean/default-settings/files/zzz-default-settings
         # sed -i "/DISTRIB_GITHUB/a\echo \"DISTRIB_GITHUB=\'https://github.com/${{github.repository}}\'\" >> /etc/openwrt_release" openwrt/package/lean/default-settings/files/zzz-default-settings
         #required>>add "DISTRIB_VERSIONS" to "zzz-default-settings"
@@ -101,6 +103,13 @@ jobs:
         # sed -i "/DISTRIB_VERSIONS/a\echo \"DISTRIB_VERSIONS=\'${TEMP:8}\'\" >> /etc/openwrt_release" openwrt/package/lean/default-settings/files/zzz-default-settings
         #nonessential>>add "github.actor" to "DISTRIB_DESCRIPTION" in "zzz-default-settings"
         # sed -i "s/OpenWrt /${{github.actor}} compiled (${TEMP:8}) \/ OpenWrt /g" openwrt/package/lean/default-settings/files/zzz-default-settings
+        cat > openwrt/files/etc/uci-defaults/99-release-info << EOF
+        #!/bin/sh
+        sed -i '/DISTRIB_GITHUB/d; /DISTRIB_VERSIONS/d' /etc/openwrt_release
+        echo "DISTRIB_GITHUB='https://github.com/${{github.repository}}'" >> /etc/openwrt_release
+        echo "DISTRIB_VERSIONS='${TEMP:12}'" >> /etc/openwrt_release
+        sed -i "/^DISTRIB_DESCRIPTION=/s/=ImmortalWrt/=${{github.actor}} compiled (${TEMP:12}) \/ ImmortalWrt/g" /etc/openwrt_release
+        EOF
 
     - name: Load custom configuration
       run: |
