--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -208,7 +208,7 @@ jobs:
         echo "WORKSPACE_DIR=$PWD" >> $GITHUB_ENV
         cd  targets/*/*
         echo "UPLOAD_PATH=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
         
     - name: Compressed kernel packages
       uses: thedoctor0/zip-release@master
