--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -300,6 +300,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
+    if: github.env.UPLOAD_BIN_DIR == 'true' && github.env.DEPLOY_TO_PAGES == 'true'
     permissions:
       pages: write
       id-token: write
