--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -146,7 +146,11 @@ jobs:
 
       - name: Load custom configuration
         run: |
-          [ -e files ] && mv files immortalwrt/files
+          [ -e files ] && {
+            mv files immortalwrt/files
+            echo "已移动 files 至 immortalwrt/files。"
+            ls -al immortalwrt/files
+          }
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE immortalwrt/.config
           chmod +x $DIY_P2_SH
           cd immortalwrt
